feat: use workers domain names

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,31 +5,31 @@ http {
   }
 
   upstream api_upstream {
-    server 95.163.234.196:3030;
-    server 80.78.241.164:3030;
-    server 188.93.210.182:3030;
-    server 37.140.195.137:3030;
+    server worker-1.yotemi.com:3030;
+    server worker-2.yotemi.com:3030;
+    server worker-3.yotemi.com:3030;
+    server worker-4.yotemi.com:3030;
   }
 
   upstream socket_upstream {
-    server 95.163.234.196:3031;
-    server 80.78.241.164:3031;
-    server 188.93.210.182:3031;
-    server 37.140.195.137:3031;
+    server worker-1.yotemi.com:3031;
+    server worker-2.yotemi.com:3031;
+    server worker-3.yotemi.com:3031;
+    server worker-4.yotemi.com:3031;
   }
 
   upstream front_upstream {
-    server 95.163.234.196:3000;
-    server 80.78.241.164:3000;
-    server 188.93.210.182:3000;
-    server 37.140.195.137:3000;
+    server worker-1.yotemi.com:3000;
+    server worker-2.yotemi.com:3000;
+    server worker-3.yotemi.com:3000;
+    server worker-4.yotemi.com:3000;
   }
 
   upstream admin_upstream {
-    server 95.163.234.196:80;
-    server 80.78.241.164:80;
-    server 188.93.210.182:80;
-    server 37.140.195.137:80;
+    server worker-1.yotemi.com:3001;
+    server worker-2.yotemi.com:3001;
+    server worker-3.yotemi.com:3001;
+    server worker-4.yotemi.com:3001;
   }
 
   server {
