fix: do not reuse ssl session

--- a/nginx.conf
+++ b/nginx.conf
@@ -62,6 +62,7 @@ http {
       proxy_http_version      1.1;
       client_max_body_size    200M;
       proxy_pass              https://front_upstream/;
+      proxy_ssl_session_reuse off;
     }
 
     location /api/ {
@@ -76,6 +77,7 @@ http {
       proxy_set_header        Connection $connection_upgrade;
       client_max_body_size    200M;
       proxy_pass              https://api_upstream/;
+      proxy_ssl_session_reuse off;
     }
 
     location /socket.io {
@@ -93,6 +95,7 @@ http {
       client_max_body_size    200M;
       proxy_pass              https://socket_upstream/socket.io;
       proxy_redirect          off;
+      proxy_ssl_session_reuse off;
     }
   }
 
@@ -128,6 +131,7 @@ http {
       proxy_set_header        Connection "Upgrade";
       client_max_body_size    200M;
       proxy_pass              https://admin_upstream/;
+      proxy_ssl_session_reuse off;
     }
   }
 }
