fix: use correct upstreams

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,31 +5,31 @@ http {
   }
 
   upstream api_upstream {
-    server worker-1.yotemi.com:3030;
-    server worker-2.yotemi.com:3030;
-    server worker-3.yotemi.com:3030;
-    server worker-4.yotemi.com:3030;
+    server worker-1.yotemi.com/api;
+    server worker-2.yotemi.com/api;
+    server worker-3.yotemi.com/api;
+    server worker-4.yotemi.com/api;
   }
 
   upstream socket_upstream {
-    server worker-1.yotemi.com:3031;
-    server worker-2.yotemi.com:3031;
-    server worker-3.yotemi.com:3031;
-    server worker-4.yotemi.com:3031;
+    server worker-1.yotemi.com/socket.io;
+    server worker-2.yotemi.com/socket.io;
+    server worker-3.yotemi.com/socket.io;
+    server worker-4.yotemi.com/socket.io;
   }
 
   upstream front_upstream {
-    server worker-1.yotemi.com:3000;
-    server worker-2.yotemi.com:3000;
-    server worker-3.yotemi.com:3000;
-    server worker-4.yotemi.com:3000;
+    server worker-1.yotemi.com;
+    server worker-2.yotemi.com;
+    server worker-3.yotemi.com;
+    server worker-4.yotemi.com;
   }
 
   upstream admin_upstream {
-    server worker-1.yotemi.com:3001;
-    server worker-2.yotemi.com:3001;
-    server worker-3.yotemi.com:3001;
-    server worker-4.yotemi.com:3001;
+    server worker-1.yotemi.com/admin;
+    server worker-2.yotemi.com/admin;
+    server worker-3.yotemi.com/admin;
+    server worker-4.yotemi.com/admin;
   }
 
   server {
