--- a/nginx.conf
+++ b/nginx.conf
@@ -4,32 +4,11 @@ http {
     '' close;
   }
 
-  upstream api_upstream {
-    server worker-1.yotemi.com/api;
-    server worker-2.yotemi.com/api;
-    server worker-3.yotemi.com/api;
-    server worker-4.yotemi.com/api;
-  }
-
-  upstream socket_upstream {
-    server worker-1.yotemi.com/socket.io;
-    server worker-2.yotemi.com/socket.io;
-    server worker-3.yotemi.com/socket.io;
-    server worker-4.yotemi.com/socket.io;
-  }
-
-  upstream front_upstream {
+  upstream proxy_upstream {
     server worker-1.yotemi.com;
     server worker-2.yotemi.com;
     server worker-3.yotemi.com;
     server worker-4.yotemi.com;
-  }
-
-  upstream admin_upstream {
-    server worker-1.yotemi.com/admin;
-    server worker-2.yotemi.com/admin;
-    server worker-3.yotemi.com/admin;
-    server worker-4.yotemi.com/admin;
   }
 
   server {
@@ -61,7 +40,7 @@ http {
       proxy_connect_timeout   1800;
       proxy_http_version      1.1;
       client_max_body_size    200M;
-      proxy_pass              https://front_upstream/;
+      proxy_pass              https://proxy_upstream/;
       proxy_ssl_session_reuse off;
     }
 
@@ -76,7 +55,7 @@ http {
       proxy_set_header        Upgrade $http_upgrade;
       proxy_set_header        Connection $connection_upgrade;
       client_max_body_size    200M;
-      proxy_pass              https://api_upstream/;
+      proxy_pass              https://proxy_upstream/api/;
       proxy_ssl_session_reuse off;
     }
 
@@ -93,7 +72,7 @@ http {
       proxy_cache_bypass      $http_upgrade;
       proxy_buffering         off;
       client_max_body_size    200M;
-      proxy_pass              https://socket_upstream/socket.io;
+      proxy_pass              https://proxy_upstream/socket.io/;
       proxy_redirect          off;
       proxy_ssl_session_reuse off;
     }
@@ -130,7 +109,7 @@ http {
       proxy_set_header        Upgrade $http_upgrade;
       proxy_set_header        Connection "Upgrade";
       client_max_body_size    200M;
-      proxy_pass              https://admin_upstream/;
+      proxy_pass              https://proxy_upstream/admin/;
       proxy_ssl_session_reuse off;
     }
   }
