--- a/nginx.conf
+++ b/nginx.conf
@@ -41,6 +41,8 @@ http {
       proxy_http_version      1.1;
       client_max_body_size    200M;
       proxy_pass              https://proxy_upstream/;
+      proxy_ssl_name          $host;
+      proxy_ssl_server_name   on;
       proxy_ssl_session_reuse off;
     }
 
@@ -56,6 +58,8 @@ http {
       proxy_set_header        Connection $connection_upgrade;
       client_max_body_size    200M;
       proxy_pass              https://proxy_upstream/api/;
+      proxy_ssl_name          $host;
+      proxy_ssl_server_name   on;
       proxy_ssl_session_reuse off;
     }
 
@@ -74,6 +78,8 @@ http {
       client_max_body_size    200M;
       proxy_pass              https://proxy_upstream/socket.io/;
       proxy_redirect          off;
+      proxy_ssl_name          $host;
+      proxy_ssl_server_name   on;
       proxy_ssl_session_reuse off;
     }
   }
@@ -110,6 +116,8 @@ http {
       proxy_set_header        Connection "Upgrade";
       client_max_body_size    200M;
       proxy_pass              https://proxy_upstream/admin/;
+      proxy_ssl_name          $host;
+      proxy_ssl_server_name   on;
       proxy_ssl_session_reuse off;
     }
   }
