fix: use ssl port

--- a/nginx.conf
+++ b/nginx.conf
@@ -40,7 +40,7 @@ http {
       proxy_connect_timeout   1800;
       proxy_http_version      1.1;
       client_max_body_size    200M;
-      proxy_pass              https://proxy_upstream/;
+      proxy_pass              https://proxy_upstream:443/;
       proxy_ssl_name          $host;
       proxy_ssl_server_name   on;
       proxy_ssl_session_reuse off;
@@ -57,7 +57,7 @@ http {
       proxy_set_header        Upgrade $http_upgrade;
       proxy_set_header        Connection $connection_upgrade;
       client_max_body_size    200M;
-      proxy_pass              https://proxy_upstream/api/;
+      proxy_pass              https://proxy_upstream:443/api/;
       proxy_ssl_name          $host;
       proxy_ssl_server_name   on;
       proxy_ssl_session_reuse off;
@@ -76,7 +76,7 @@ http {
       proxy_cache_bypass      $http_upgrade;
       proxy_buffering         off;
       client_max_body_size    200M;
-      proxy_pass              https://proxy_upstream/socket.io/;
+      proxy_pass              https://proxy_upstream:443/socket.io/;
       proxy_redirect          off;
       proxy_ssl_name          $host;
       proxy_ssl_server_name   on;
@@ -115,7 +115,7 @@ http {
       proxy_set_header        Upgrade $http_upgrade;
       proxy_set_header        Connection "Upgrade";
       client_max_body_size    200M;
-      proxy_pass              https://proxy_upstream/admin/;
+      proxy_pass              https://proxy_upstream:443/admin/;
       proxy_ssl_name          $host;
       proxy_ssl_server_name   on;
       proxy_ssl_session_reuse off;
